<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".modules.convert_currency.ConvertCurrencyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider_medium"
        android:orientation="vertical"
        android:paddingStart="@dimen/convertContainerMarginStartEnd"
        android:paddingEnd="@dimen/convertContainerMarginStartEnd"
        android:showDividers="beginning|end|middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/convertContainerMarginTop"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convertInto" />

            <TextView
                android:id="@+id/currencyNameTV"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="гривны" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/priceTV"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                tools:text="1000" />

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roubleSymbol" />

            <TextView
                style="@style/TextView.Header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                android:text="@string/priceFor" />

            <TextView
                android:id="@+id/nominalTV"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                tools:text="76" />

            <TextView
                style="@style/TextView.Header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                android:text="@string/count" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueETL"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roubles"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valueET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/convertResultTV"
                style="@style/TextView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100" />

            <TextView
                android:id="@+id/currencyResultNameTV"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/closeBtn"
            style="@style/ContainedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/convertContainerMarginBottom"
            android:text="@string/close" />
    </LinearLayout>

</ScrollView>