<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/convertContainerMarginStartEnd"
                android:divider="@drawable/vertical_divider_small"
                android:orientation="vertical"
                android:showDividers="beginning|middle|end">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextView.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valuteName" />

                    <TextView
                        android:id="@+id/currencyNameTV"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="гривна" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valuteChar" />

                    <TextView
                        android:id="@+id/currencyCharTV"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                        tools:text="обознач" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/denomination" />

                    <TextView
                        android:id="@+id/currencyDenominationTV"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                        tools:text="1000" />

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price" />

                    <TextView
                        android:id="@+id/priceTV"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/currencyItemValueTextViewMarginStart"
                        tools:text="1000" />

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roubleSymbol" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convertBTN"
            style="@style/ImageButton"
            android:layout_width="@dimen/convertBtnWidthHeight"
            android:layout_height="@dimen/convertBtnWidthHeight"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/convertContainerMarginStartEnd"
            app:icon="@android:drawable/ic_menu_send"
            app:iconTint="@color/teal_700" />

    </LinearLayout>

</LinearLayout>